--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Page de Sebastien Dupert</title>
+    <title>Page de Matt Wilson</title>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
     <link href="css/aos.css" rel="stylesheet">
@@ -23,7 +23,7 @@
               <ul class="navbar-nav">
                 <li class="nav-item"><a class="nav-link smooth-scroll" href="#about">About</a></li>
                 <li class="nav-item"><a class="nav-link smooth-scroll" href="#CV">Experience</a></li>
-                <li class="nav-item"><a class="nav-link smooth-scroll" href="mailto:sebastien.dupert@protonmail.com">Contact</a></li>
+                <li class="nav-item"><a class="nav-link smooth-scroll" href="mailto:matt-wilson0@protonmail.com">Contact</a></li>
               </ul>
             </div>
           </div>
@@ -38,9 +38,9 @@
       <div class="page-header-image" data-parallax="true" style="background-image: url('images/cc-bg-1.jpg');"></div>
       <div class="container">
         <div class="content-center">
-          <div class="cc-profile-image"><a href="#"><img src="images/sebastien_noback2.png" alt="Image"/></a></div>
-          <div class="h2 title">Sebastien Dupert</div>
-          <p class="category text-white">Site CV personnel</p><a class="btn btn-primary smooth-scroll mr-2" href="mailto:sebastien.dupert@protonmail.com" data-aos="" data-aos-anchor="data-aos-anchor">Hire Me</a><a class="btn btn-primary" href="/index.html" data-aos="" data-aos-anchor="data-aos-anchor">Download CV</a>
+          <div class="cc-profile-image"><a href="#"><img src="images/mattwilson.png" alt="Image"/></a></div>
+          <div class="h2 title">Matt Wilson</div>
+          <p class="category text-white">Site CV personnel</p><a class="btn btn-primary smooth-scroll mr-2" href="mailto:matt-wilson0@protonmail.com" data-aos="" data-aos-anchor="data-aos-anchor">Hire Me</a><a class="btn btn-primary" href="/index.html" data-aos="" data-aos-anchor="data-aos-anchor">Download CV</a>
         </div>
       </div>
       <div class="section">
