--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="collapse navbar-collapse justify-content-end" id="navigation">
               <ul class="navbar-nav">
                 <li class="nav-item"><a class="nav-link smooth-scroll" href="#about">About</a></li>
-                <li class="nav-item"><a class="nav-link smooth-scroll" href="#CV">Experience</a></li>
+                <li class="nav-item"><a class="nav-link smooth-scroll" href="/cv/">Experience</a></li>
                 <li class="nav-item"><a class="nav-link smooth-scroll" href="mailto:matt-wilson0@protonmail.com">Contact</a></li>
               </ul>
             </div>
@@ -40,7 +40,7 @@
         <div class="content-center">
           <div class="cc-profile-image"><a href="#"><img src="images/mattwilson.png" alt="Image"/></a></div>
           <div class="h2 title">Matt Wilson</div>
-          <p class="category text-white">Site CV personnel</p><a class="btn btn-primary smooth-scroll mr-2" href="mailto:matt-wilson0@protonmail.com" data-aos="" data-aos-anchor="data-aos-anchor">Hire Me</a><a class="btn btn-primary" href="/index.html" data-aos="" data-aos-anchor="data-aos-anchor">Download CV</a>
+          <p class="category text-white">Site CV personnel</p><a class="btn btn-primary smooth-scroll mr-2" href="mailto:matt-wilson0@protonmail.com" data-aos="" data-aos-anchor="data-aos-anchor">Hire Me</a><a class="btn btn-primary" href="/cv/" data-aos="" data-aos-anchor="data-aos-anchor">Download CV</a>
         </div>
       </div>
       <div class="section">
