--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <div class="page-header-image" data-parallax="true" style="background-image: url('images/cc-bg-1.jpg');"></div>
       <div class="container">
         <div class="content-center">
-          <div class="cc-profile-image"><a href="#"><img src="images/mattwilson.png" alt="Image"/></a></div>
+          <div class="cc-profile-image"><a href="#"><img src="images/ProfilePhoto.jpg" alt="Image"/></a></div>
           <div class="h2 title">Matt Wilson</div>
           <p class="category text-white">Site CV personnel</p><a class="btn btn-primary smooth-scroll mr-2" href="mailto:matt-wilson0@protonmail.com" data-aos="" data-aos-anchor="data-aos-anchor">Hire Me</a><a class="btn btn-primary" href="/cv/" data-aos="" data-aos-anchor="data-aos-anchor">Download CV</a>
         </div>
