--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <div class="content-center">
           <div class="cc-profile-image"><a href="#"><img src="images/ProfilePhoto.jpg" alt="Image"/></a></div>
           <div class="h2 title">Matt Wilson</div>
-          <p class="category text-white">Site CV personnel</p><a class="btn btn-primary smooth-scroll mr-2" href="mailto:matt.k.wilson@hotmail.com" data-aos="" data-aos-anchor="data-aos-anchor">Hire Me</a><a class="btn btn-primary" href="/cv/mw.html" data-aos="" data-aos-anchor="data-aos-anchor">Download CV</a>
+          <p class="category text-white">Site CV personnel</p><a class="btn btn-primary smooth-scroll mr-2" href="mailto:matt.k.wilson@hotmail.com" data-aos="" data-aos-anchor="data-aos-anchor">contacter-moi</a><a class="btn btn-primary" href="/cv/mw.html" data-aos="" data-aos-anchor="data-aos-anchor">Télécharger Dossier</a>
         </div>
       </div>
       <div class="section">
